test/code/test_class_private_redefinition_error.php
<?php

class A {
    public $a = 100;
}

class B extends A {
    private $a = 200;
}

